--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,11 @@ name: test
 on: push
 jobs:
   test:
-    runs-on: [ubuntu-latest,ubuntu-24.04,ubuntu-22.04,ubuntu-20.04]
     strategy:
       matrix:
+        os: [ubuntu-latest, ubuntu-22.04, ubuntu-20.04]
         python-version: ["3.5","3.6","3.7","3.8","3.9","3.10"]
+    runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v3
       - name: All test
